@@ -63,7 +63,6 @@ case "${host}" in
     i[[34567]]86-*-linux-gnu* ) SUPPORTED="yes";;
     * ) SUPPORTED="no"
 esac
-AM_CONDITIONAL(SUPPORTED, test "${SUPPORTED}" = "yes")
 
 if test "${SUPPORTED}" = "yes" ; then
     AC_PROG_CC
@@ -80,11 +79,15 @@ if test "${SUPPORTED}" = "yes" ; then
     dnl the synthetic target used 8.3.1
     if test "${TK_MAJOR_VERSION}" = "8" ; then
         if test ${TK_MINOR_VERSION} -lt 3 ; then
-            AC_MSG_ERROR([The synthetic target support requires at least version 8.3 of Tcl/Tk])
+            AC_MSG_WARN([The synthetic target support requires at least version 8.3 of Tcl/Tk])
+	    AC_MSG_WARN([Synthetic target host-side support will not be built])
+	    SUPPORTED="no"
         fi
     fi
     ECOS_PACKAGE_DIRS
 fi
+
+AM_CONDITIONAL(SUPPORTED, test "${SUPPORTED}" = "yes")
 
 dnl There is no real need for a config.h file at this time, since the code
 dnl is specific to x86 Linux. This may change in future.
